// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not show cartpopover 1`] = `
<div
  className="HiddenCss-mdUp-16"
>
  <div
    className="inject-CartPopover-with-uiStore-container-1 inject-CartPopover-with-uiStore-isContainerHidden-3"
  >
    <div
      className="MuiGrid-container-24 MuiGrid-spacing-xs-24-48 inject-CartPopover-with-uiStore-gridContainer-2"
    >
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64 inject-CartPopover-with-uiStore-containerItem-5"
      >
        <img
          alt="Item Title"
          className="inject-CartPopover-with-uiStore-addedToCartImg-6"
          src="//placehold.it/100"
        />
        <span
          className="MuiTypography-root-121 MuiTypography-body1-130 inject-CartPopover-with-uiStore-addedToCartText-8"
        >
          10
           "
          <span
            className="inject-CartPopover-with-uiStore-addedToCartItemName-7"
          >
            Item Title
          </span>
          " added to cart
        </span>
      </div>
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64"
      >
        <a
          className=""
          href="/checkout"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <div
            className="Button__ButtonDiv-bnfrK eloVkm"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title={undefined}
          >
            <div>
              Checkout
            </div>
            <div
              className="Button__SpinnerWrap-bgOcuM cCKgPo"
              style={
                Object {
                  "opacity": 0,
                  "paddingLeft": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`show cartpopover 1`] = `
<div
  className="HiddenCss-mdUp-16"
>
  <div
    className="inject-CartPopover-with-uiStore-container-1 inject-CartPopover-with-uiStore-isContainerVisible-4"
  >
    <div
      className="MuiGrid-container-24 MuiGrid-spacing-xs-24-48 inject-CartPopover-with-uiStore-gridContainer-2"
    >
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64 inject-CartPopover-with-uiStore-containerItem-5"
      >
        <img
          alt="Item Title"
          className="inject-CartPopover-with-uiStore-addedToCartImg-6"
          src="//placehold.it/100"
        />
        <span
          className="MuiTypography-root-121 MuiTypography-body1-130 inject-CartPopover-with-uiStore-addedToCartText-8"
        >
          10
           "
          <span
            className="inject-CartPopover-with-uiStore-addedToCartItemName-7"
          >
            Item Title
          </span>
          " added to cart
        </span>
      </div>
      <div
        className="MuiGrid-item-25 MuiGrid-grid-xs-12-64"
      >
        <a
          className=""
          href="/checkout"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="link"
          tabIndex={0}
        >
          <div
            className="Button__ButtonDiv-bnfrK eloVkm"
            onClick={[Function]}
            onKeyPress={[Function]}
            role="button"
            tabIndex={0}
            title={undefined}
          >
            <div>
              Checkout
            </div>
            <div
              className="Button__SpinnerWrap-bgOcuM cCKgPo"
              style={
                Object {
                  "opacity": 0,
                  "paddingLeft": 0,
                  "width": 0,
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
